--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "start": "start-storybook -p 6006",
+    "build": "build-storybook",
+    "deploy": "netlify deploy  -d storybook-static"
   },
   "keywords": [],
   "author": "",
