--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "babel-core": "^6.26.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.4.0",
+    "@kadira/storybook-addon-actions": "^1.1.3",
+    "@kadira/storybook-addon-links": "^1.0.1",
+    "@storybook/addon-actions": "^3.4.12",
     "@storybook/addon-backgrounds": "^3.4.0",
     "@storybook/addon-links": "^3.4.0",
     "@storybook/addons": "^3.4.0",
