--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
     "babel-core": "^6.26.0"
   },
   "devDependencies": {
-    "@kadira/storybook-addon-actions": "^1.1.3",
-    "@kadira/storybook-addon-links": "^1.0.1",
     "@storybook/addon-actions": "^3.4.12",
     "@storybook/addon-backgrounds": "^3.4.0",
     "@storybook/addon-links": "^3.4.0",
+    "@storybook/addon-options": "^3.4.0",
     "@storybook/addons": "^3.4.0",
     "@storybook/react": "^3.4.0",
     "babel-runtime": "^6.26.0",
