--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "start-storybook -p 6006",
     "build": "build-storybook",
-    "deploy": "netlify deploy  -d storybook-static"
+    "deploy": "netlify deploy -d storybook-static --prod"
   },
   "keywords": [],
   "author": "",
