--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "Library",
   "version": "1.0.0",
   "main": "index.js",
-  "dependencies": {
-    "babel-core": "^6.26.0"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.18.10",
+    "@babel/runtime": "^7.18.9",
     "@storybook/addon-actions": "^5.0.8",
     "@storybook/addon-backgrounds": "^5.0.8",
     "@storybook/addon-links": "^5.0.8",
     "@storybook/addon-options": "^5.0.8",
     "@storybook/addons": "^5.0.8",
     "@storybook/react": "^5.0.8",
-    "babel-runtime": "^6.26.0",
+    "babel-loader": "^8.2.5",
     "css-loader": "^2.1.1",
     "node-sass": "^4.11.0",
     "react": "^16.8.4",
